--- a/lib/l10n/intl_ru_RU.arb
+++ b/lib/l10n/intl_ru_RU.arb
@@ -15,5 +15,8 @@
   "signIn": "Вход",
   "language": "Язык",
   "english": "Английский",
-  "russian": "Русский"
+  "russian": "Русский",
+  "homePage" : "Домашняя страница",
+  "persons" : "Персонажи",
+  "settings": "Настройки"
 }
