refactor auth screen

--- a/lib/l10n/intl_ru_RU.arb
+++ b/lib/l10n/intl_ru_RU.arb
@@ -12,7 +12,7 @@
   "inputErrorPasswordIsLong": "Пароль должен содержать не более 16 символов",
   "tryAgain": "Попробуйте снова",
   "close": "Закрыть",
-  "signIn": "Вход",
+  "signIn": "Войти",
   "language": "Язык",
   "english": "Английский",
   "russian": "Русский",
